Name:           	ReviewBoard
Version:        	0.3
Synopsis:			Haskell bindings for ReviewBoard
Description:    	Haskell bindings for ReviewBoard (<http://code.google.com/p/reviewboard/>).
Author:         	Adam Smyczek
Maintainer:     	<adam.smyczek@gmail.com>
Category:       	Development
Homepage:           http://github.com/smitti/hreviewboard/tree/master
License:        	BSD3
License-file:   	LICENSE
Cabal-Version:  	>= 1.2
Build-type: 		Simple
extra-source-files: README Tests/Tests.hs Tests/TestsWithServer.hs 
                    example/mkrr.hs example/rbpatch.hs

Library
  Exposed-modules: 
                ReviewBoard.Api
                ReviewBoard.Core
                ReviewBoard.Response
                ReviewBoard.Request
  Build-Depends:
                base, mtl, random, containers,
                network, curl, json

Executable mkrr
  main-is:
                example/mkrr.hs
  other-modules:
                ReviewBoard.Api
                ReviewBoard.Core
                ReviewBoard.Response
                ReviewBoard.Request
  Build-Depends:
                base, mtl, random, directory,
                network, curl, json

Executable rbpatch
  main-is:
                example/rbpatch.hs
  other-modules:
                ReviewBoard.Api
                ReviewBoard.Core
                ReviewBoard.Response
                ReviewBoard.Request
  Build-Depends:
                base, mtl, random, directory, process,
                network, curl, json

